// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mark should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<mark
  class="rmd-mark"
  data-testid="mark"
>
  Content
</mark>
`;

exports[`Mark should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<mark
  class="rmd-mark custom-class-name"
  data-testid="mark"
  style="color: white;"
>
  Content
</mark>
`;
